--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 ~$AV-184 - Get a Morning Briefing from your Smart Home.docx
+100CANON/MVI_0768.MP4
+.gitignore
+100CANON/MVI_0767.MP4
+100CANON/MVI_0766.MP4
+Thumb_1.158.1.png
+Thumb_1.158.1.drx
