--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 100CANON/MVI_0766.MP4
 Thumb_1.158.1.png
 Thumb_1.158.1.drx
+2023-06-03 08-54-21.mp4
+.DS_Store
+Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
+HMAV-184 - Home Assistant Briefing.drp
+Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
+HMAV-184 - Get a Morning Briefing from your Smart Home.docx
+Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
