--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
 ~$AV-184 - Get a Morning Briefing from your Smart Home.docx
-100CANON/MVI_0768.MP4
 .gitignore
-100CANON/MVI_0767.MP4
-100CANON/MVI_0766.MP4
 Thumb_1.158.1.png
 Thumb_1.158.1.drx
-2023-06-03 08-54-21.mp4
+*.mp4
+*.mov
 .DS_Store
-Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
-HMAV-184 - Home Assistant Briefing.drp
-Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
 HMAV-184 - Get a Morning Briefing from your Smart Home.docx
 Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
+*.edl
+*.drp
