updates to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ HMAV-184 - Get a Morning Briefing from your Smart Home.docx
 Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
 *.edl
 *.drp
+*.afphoto
+Render/Thumb1080.png
+*.docx
+Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
