--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,8 @@ Thumb_1.158.1.drx
 *.mov
 .DS_Store
 HMAV-184 - Get a Morning Briefing from your Smart Home.docx
-Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
-*.edl
+Render/*.*
 *.drp
 *.afphoto
-Render/Thumb1080.png
 *.docx
-Render/HMAV-184-Get a Morning Briefing from your Smart Home - YouTube Description.txt
+
